--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Simple Calculator</string>
-    <string name="syntax_error">#Syntax Error!</string>
-    <string name="divided_by_zero">#Divided by zero!</string>
+    <string name="syntax_error">#SYNTAX ERROR</string>
+    <string name="divided_by_zero">#DIVIDED BY ZERO</string>
     <string name="internet_not_available">Can\'t convert. Check your internet connection.</string>
     <string name="input_not_valid">Can\'t convert. Input not valid!</string>
-    <string name="network_error">#Network Error</string>
-    <string name="api_error">#API Error: %1$d</string>
+    <string name="network_error">#NETWORK ERROR</string>
+    <string name="api_error">#API ERROR %1$d</string>
     <string name="zero">0</string>
     <string name="one">1</string>
     <string name="two">2</string>
