show loading on slow connection/disable touch while querying

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="cad">CAD (Canadian Dollar)</string>
     <string name="chf">CHF (Swiss Franc)</string>
     <string name="currency_flag">Currency flag</string>
+    <string name="waiting_for_fixer">Waiting for Fixer.io…</string>
 </resources>
