--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
     <string name="app_name">Simple Calculator</string>
+
     <string name="syntax_error">#SYNTAX ERROR</string>
     <string name="divided_by_zero">#DIVIDED BY ZERO</string>
     <string name="internet_not_available">Can\'t convert. Check your internet connection.</string>
     <string name="input_not_valid">Can\'t convert. Input not valid!</string>
     <string name="network_error">#NETWORK ERROR</string>
     <string name="api_error">#API ERROR %1$d</string>
+
     <string name="zero">0</string>
     <string name="one">1</string>
     <string name="two">2</string>
@@ -26,6 +28,7 @@
     <string name="mul">\u00d7</string>
     <string name="sub">\u2212</string>
     <string name="add">\u002b</string>
+
     <string name="convert_to">Convert to:</string>
     <string name="usd">USD (US Dollar)</string>
     <string name="eur">EUR (Euro)</string>
@@ -34,6 +37,29 @@
     <string name="aud">AUD (Australian Dollar)</string>
     <string name="cad">CAD (Canadian Dollar)</string>
     <string name="chf">CHF (Swiss Franc)</string>
+
     <string name="currency_flag">Currency flag</string>
     <string name="waiting_for_fixer">Waiting for Fixer.io…</string>
+
+    <string name="settings_menu_item">Settings</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="caching">Caching</string>
+
+    <string name="check_for_new_results">Check for new results:</string>
+    <string name="check_for_new_results_pref_key" translatable="false">check_for_new_results_pref_key</string>
+    <string-array name="check_for_new_results_labels">
+        <item>every hour</item>
+        <item>every 30 minutes</item>
+        <item>every 15 minutes</item>
+        <item>every minute</item>
+        <item>always</item>
+    </string-array>
+    <string-array name="check_for_new_results_values">
+        <item>60</item>
+        <item>30</item>
+        <item>15</item>
+        <item>1</item>
+        <item>0</item>
+    </string-array>
+    <string name="check_for_new_results_default_value" translatable="false">60</string>
 </resources>
